<resources>
    <string name="app_name">Getir</string>

    <string name="track_order">Sipariş Takibi</string>

    <string name="navigation_drawer_open">Navigasyon barı aç</string>
    <string name="navigation_drawer_close">Navigasyon barı kapat</string>

    <string name="action_settings">Ayarlar</string>

    <string name="please_wait">Lütfen bekleyiniz</string>
    <string name="login_user_name">Email</string>
    <string name="login_password">Şifre</string>

    <string name="error_password_empty">Lütfen geçerli bir şifre giriniz.</string>
    <string name="title_activity_maps">Harita</string>

    <string name="product">Ürün</string>
    <string name="category">Kategori</string>
    <string name="categories">Kategoriler</string>
    <string name="cart">Sepetim</string>
    <string name="empty_cart">Sepeti boşalt</string>
    <string name="empty_cart_placeholder">Sepetinizde bir ürün bulunmuyor.</string>

    <string name="continue_cart">Devam Et</string>

    <string name="marker_address">Teslimat adresi belirle</string>

    <string name="min">dk.</string>

    <string name="permission_rationale_location">Haritadaki yeriniz için lokasyon izinleri gereklidir.</string>
    <string name="location_permission_denied">Lütfen tekrar deneyiniz ve lokasyonu açınız.</string>
    <string name="permission_required_toast">Lokasyon izinleri gereklidir.</string>

    <string name="change_language">Dil Seçimi</string>
    <string name="language_turkish">Türkçe</string>
    <string name="language_english">İngilizce</string>

    <string name="delivery_address">TESLİMAT ADRESİ</string>
    <string name="promotion">PROMOSYON</string>
    <string name="order">Sipariş Ver</string>

    <string name="order_on_the_way">Siparişiniz yolda...</string>
    <string name="order_arrived">Siparişiniz ulaştı!</string>

    <string name="ok">Tamam</string>
</resources>
